--- a/home.html
+++ b/home.html
@@ -29,25 +29,27 @@
         }
         footer {
             text-align: center;
-            position: absolute;
+            position: fixed;
             bottom: 0;
             width: 100%;
             height: 20px;
-            line-height: 0px;
+            line-height: 20px;
         }
-        navbar-nav {
-            align-self: center;
-            margin-bottom: 0px;
+        .navbar-nav {
+            flex-direction: row;
+            justify-content: center;
+        }
+        .navbar {
+            flex-wrap: wrap;
         }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Profile <span class="sr-only">(current)</span></a>
@@ -89,8 +91,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <footer class="text-center">
-        <p>Developed by John Doe</p>
+    <footer class="footer">
+        <p>&copy; 2021 Developed by Oscar Ll.</p>
     </footer>
 </body>
 </html>
