--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
     </div>
 
     <footer class="footer">
-        &copy; 2021 Developed by Oscar Ll.
+        &copy; 2021 Developed by Oscar Ll. with the help of ChatGPT.
     </footer>
     
     <!-- SCRIPTS -->
