--- a/home.html
+++ b/home.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #f8f9fa;
-            color: #212529;
+            background-color: rgb(255, 255, 255);
+            color: #000000;
             font-family: Arial, sans-serif;
         }
         .container {
-            margin-top: 10px;
+            margin-top: 0px;
         }
         .profile-photo {
             width: 100%;
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Profile <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Services</a>
