--- a/home.html
+++ b/home.html
@@ -14,13 +14,13 @@
         }
         .profile-photo {
             width: 100%;
-            max-width: 400px;
+            /* max-width: 250px; */
             display: block;
             margin: auto;
         }
         .gif {
             width: 100%;
-            max-width: 800px;
+            /* max-width: 700px; */
             display: block;
             margin: auto;
         }
@@ -67,7 +67,7 @@
                     <a class="nav-link" href="#">Cybersecurity</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Software-defined Radio</a>
+                    <a class="nav-link" href="#">SDR</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Hobbies</a>
