--- a/home.html
+++ b/home.html
@@ -11,16 +11,18 @@
         }
         .container {
             margin-top: 0px;
+            display: grid;
+            grid-template-columns: repeat(3, ifr);
         }
         .profile-photo {
             width: 100%;
-            /* max-width: 250px; */
+            max-width: 250px;
             display: block;
             margin: auto;
         }
         .gif {
             width: 100%;
-            /* max-width: 700px; */
+            max-width: 700px;
             display: block;
             margin: auto;
         }
@@ -33,7 +35,7 @@
             bottom: 0;
             width: 100%;
             height: 20px;
-            line-height: 20px;
+            line-height: 0px;
         }
         .navbar-nav {
             flex-direction: row;
@@ -42,6 +44,13 @@
         .navbar {
             flex-wrap: wrap;
         }
+        /* @media (min-width: 768px) {
+            .column {
+                float: left;
+                width: 50%;
+            }
+        } */
+
     </style>
 </head>
 <body>
